# ops

./: .gitattributes  .gitignore  .sops.yaml  README.md  renovate.json  tailscale-policy.hujson
ansible/: README.md  deploy.yml  fix_networking.yaml  hashicorp.yml  inventory.yaml  inventory.yml  update_hosts.yaml
apps/: kustomization.yaml
ares/: compose.yml  inference-cost-calc.fsx  litellm-config.yaml  llama-swap-config-schema.json  llama-swap-config.yaml
ares/llm-config-generator/: Makefile  pyproject.toml  test.py
ares/llm-config-generator/llm_config_generator/: models.py
ares/llm-config-generator/llm_config_generator/config_models/: llama_swap.py
docs/: mkdocs.yml  requirements.in  requirements.txt
flux/: kustomization.yaml  testing.yaml
infrastructure/: kustomization.yaml  secrets.yaml  testing.yaml  update-automation.yaml
jobs/: borik.nomad  embassy.nomad  grackdb.nomad  gramfelbot.nomad  i-get-really-worried.nomad  monitoring.nomad  scribe.nomad  stats.nomad  traefik-external.nomad  traefik-internal.nomad
scripts/: build-caddy.fish
spacelift/: test.tf  versions.tf
terraform/: .terraform.lock.hcl  .tflint.hcl  Makefile  README.md  aggregates.tf  backend.tf  bastion.tf  cert-manager.tf  cheesetown.tf  cluster.tf  coder.tf  csi.tf  dns.tf  flux.tf  harbor.tf  hosts.tf  images.tf  imports.tf  ingress-test.tf  k8s_system.tf  main.tf  metallb.tf  migration.tf  monitoring.tf  netbox_geography.tf  netbox_hardware.tf  network.tf  outputs.tf  postgres.tf  prefixes.tf  providers.tf  removed.tf  rirs.tf  tailscale.tf  traefik.tf  variables.tf  vlans.tf  (+1 more)
(+457 files in other folders)
